<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ZConnect</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">Community Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="transition_string">animate</string>
    <string name="category_prompt">Choose category</string>
    <string name="dialog_message">This event has been sent for a review</string>
    <string name="dialog_title">Access Denied</string>
    <string name="request">Request</string>
    <string name="ok">OK</string>
    <string name="noImage">No Profile Image selected!,Do you want to continue without one?</string>
    <string name="title_activity_all_events">AllEvents</string>
    <string name="title_activity_tab_store_room">TabStoreRoom</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_store_room">StoreRoom</string>
    <string name="about">ZConnect is an upcoming platform which will revolutionize your way of interaction with the community. ZConnect is the online equivalent of any community in which people live together, be it your college, your company, or your locality. ZConnect gives you the power to interact virtually with the people in your community, using ZConnect’s simplified interface. Get alerts on the latest events, updated contacts, offers from shops and second-hand products on sale in your community.</string>
    <string-array name="categories">
        <item>Electronics</item>
        <item>Speakers and Headphones</item>
        <item>Storage Devices</item>
        <item>Academic Books</item>
        <item>Room Necessities</item>
        <item>Fiction</item>
        <item>Others</item>
        <item>Choose Category</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop">Shops</string>
    <string name="title_activity_shop_list">ShopList</string>
    <string name="title_activity_shop_details">Shop Details</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string-array name="hostel">

        <item>AH-1</item>
        <item>AH-2</item>
        <item>AH-3</item>
        <item>AH-4</item>
        <item>AH-5</item>
        <item>AH-6</item>
        <item>AH-7</item>
        <item>AH-8</item>
        <item>AH-9</item>
        <item>CH-1</item>
        <item>CH-2</item>
        <item>CH-3</item>
        <item>CH-4</item>
        <item>CH-5</item>
        <item>CH-6</item>
        <item>CH-7</item>
    </string-array>
    <string-array name="location">
        <item>Anywhere</item>
        <item>Airport</item>
        <item>Madgaon Railway Station</item>
        <item>Vasco Railway Station</item>
        <item>Karmali Railway Station</item>
        <item>Madgaon Bus Stop</item>
        <item>Panjim Bus Stop</item>
        <item>Vasco Bus Stop</item>
        <item>Bits</item>
    </string-array>
    <string-array name="time">
        <item>Anytime</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string name="hostel_prompt">Choose Hostel</string>
    <string name="destination_prompt">Choose Location</string>
    <string name="source_prompt">Choose Location</string>
    <string name="time_prompt">Choose Time</string>
    <string name="title_activity_phonebook_details">PhonebookDetails</string>
    <string name="title_activity_phonebook_hostel_wise">PhonebookHostelWise</string>
    <string name="title_activity_phonebook">Phonebook</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_advertisement">Advertisement</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="title_activity_view_image">viewImage</string>
    <string name="title_activity_my_product">My Products</string>
    <string name="title_activity_my_products">MyProducts</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_each_category">EachCategory</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="appwidget_text">Search Infone …</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_offers">Latest Offers</string>
    <string name="title_activity_shop_detail">Shop_detail</string>
    <string name="title_activity_cab_pooling">Cab Pooling</string>
    <string name="title_activity_pool_list">Pools Available</string>
    <string name="title_activity_campus__map">Campus Map</string>
    <string name="title_activity_cab_list_of_people">List of people</string>
    <string name="title_activity_add_cab_pool">Add Cab Pool</string>
    <string name="title_activity_my_rides">My Rides</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-9212249564562455/2728848505</string>
    <string name="banner_ad_unit_id_2">ca-app-pub-9212249564562455/9707661141</string>
    <string name="native_ad_unit_id">ca-app-pub-9212249564562455/8277700418</string>
    <string name="native_ad_unit_id_2">ca-app-pub-9212249564562455/8277700418</string>
    <string name="native_ad_unit_id_3">ca-app-pub-9212249564562455/8277700418</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed_events">Events</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</string>
    <string name="title_activity_communities_around">Communities Around</string>
    <string name="title_activity_create_community">CreateCommunity</string>
    <string name="title_activity_nitification_settings">NitificationSettings</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_cab_pool_locations">CabPoolLocations</string>
    <string name="title_activity_forums_people_list">ForumsPeopleList</string>
    <string name="search_title">Search people</string>
    <string name="infone_search">Infone Search</string>
    <string name="search_infone_hint">Search People</string>
    <string name="title_storeroom_shortlist">Shortlisted Products</string>
    <string name="GPSAlertDialogTitle">Location Permission</string>
    <string name="GPSAlertDialogMessage">allow permission</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_verfication_page">Verification</string>
    <string name="title_activity_admin_home">Admin Home</string>
    <string name="title_recents_feature_view">Community Features</string>
    <string name="create_forum">New Forum</string>
    <string name="forum_first_msg_label">First Message</string>
    <string name="forum_first_msg_hint">Type a welcome message here</string>
    <string name="status_hint">Type what you are thinking…</string>
    <string name="status_hint_ask_questions">Or ask anyone a question</string>
    <string name="status_hint_1">Is there …?</string>
    <string name="status_hint_2">Where can I …?</string>
    <string name="status_hint_3">Does anyone have …?</string>
    <string name="status_hint_4">Can anyone suggest …?</string>
    <string name="status_hint_5">Which is a better option …?</string>
    <string name="no_user_to_validate">No user to validate. Check again later.</string>
    <string name="banner_link">Open link</string>
    <string name="show_contact">Show Contact</string>
    <string name="request_contact">Request Contact</string>
    <string name="noti_channel_personal">Personal</string>
    <string name="noti_channel_community">Community</string>
    <string name="noti_channel_forums">Forums</string>
    <string name="invitation_title">Invite Friends</string>
    <string name="invitation_message">Hey, check out this amazing app! ZConnect is a social network exclusively for our community.</string>
    <string name="invitation_deep_link">https://zconnect.page.link/Tbeh</string>
    <string name="invitation_custom_image"> </string>
    <string name="invitation_cta">Call to action</string>
    <string name="edit_forum">Edit Forum</string>
    <string name="anonymous_forum">Anonymous Forum</string>
    <string name="referral_code_invite_btn">Invite Friends</string>
    <string name="referral_code_desc">Earn points by bringing your community folks on board! You and your friend both get 50 points each after your friend enters your community!</string>
    <string name="referral_code_desc_2">Send them your referral link now!</string>
    <string name="referredAnonymousUser">referredAnonymousUser</string>
    <string name="user_mentions_pattern_uid_start">&amp;//&amp;</string>
    <string name="user_mentions_pattern_username_start">/&amp;&amp;/</string>
    <string name="excl_forum_admin">Only community and forum admins can see this.</string>
    <string name="title_activity_leader_board">Leader Board</string>
    <string name="explorer_forum">Explore Forums</string>
    <string name="Rs">
        <xliff:g id="rsSymbol">\u20B9</xliff:g></string>
    <string name="order_placed_on">Ordered on</string>
    <string name="order_delivery_on">Delivery on</string>
    <string name="tc1">Last updated: ​(28th Feb 2019) Please read these Terms and Conditions carefully before using the ZConnect Android Application, operated by ​"Zutto Digital Pvt. Ltd.".Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service. By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</string>
    <string name="tc2">If you wish to purchase any product or service made available through the Service ("Purchase"),you may be asked to supply certain information relevant to your Purchase including, without limitation, your phone number, address and email.</string>
    <string name="tc3">Our Service allows you to post, link, store, share and otherwise make available certain information,text, graphics, videos, or other material ("Content"). You are responsible for the any kind of violation. All the contacts you share in the service will be used by "Zutto Digital Pvt. Ltd" to provide better services to users.</string>
</resources>