<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="10dp"
    tools:context="com.zconnect.zutto.zconnect.ReferralCode"
    tools:showIn="@layout/activity_referral_code"
    android:clipToPadding="false">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image_referral_code"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:actualImageScaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/referral_code_desc"
        android:textSize="16sp"
        android:textColor="@color/primaryText"
        android:layout_marginTop="@dimen/margin_top_between_non_similar_views"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/referral_code_desc_2"
        android:textSize="16sp"
        android:textColor="@color/primaryText"
        android:layout_marginTop="@dimen/margin_top_between_non_similar_views"/>

    <Button
        android:id="@+id/invite_btn_referral_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/referral_code_invite_btn"
        android:background="@drawable/round_button_primary"
        android:paddingStart="@dimen/button_padding_start_end"
        android:paddingEnd="@dimen/button_padding_start_end"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_top_between_non_similar_views"/>

</LinearLayout>