<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zconnect.zutto.zconnect.CabPooling"
    tools:showIn="@layout/activity_cab_pooling"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/search_for_rides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SEARCH FOR RIDES"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="wrap_content"
            android:text="From: "
            android:textSize="20dp"/>
        <com.zconnect.zutto.zconnect.CustomSpinner
            android:id="@+id/spinner_source"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="wrap_content"
            android:entries="@array/location"
            android:prompt="@string/source_prompt"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/destination"
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="wrap_content"
            android:text="Destination: "
            android:textSize="20dp"/>

        <com.zconnect.zutto.zconnect.CustomSpinner
            android:id="@+id/spinner_destination"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="wrap_content"
            android:entries="@array/location"
            android:prompt="@string/destination_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="wrap_content"
            android:text="Date: "
            android:textSize="20dp"/>


        <TextView
            android:id="@+id/calender"
            android:paddingLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:text="Click to choose" />

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="#00ffffff"
            android:src="@drawable/ic_action_cancel"
            android:scaleType="fitXY"
            android:layout_gravity="right|center"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeslot"
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="wrap_content"
            android:text="Time Slot: "
            android:textSize="20dp"/>

        <com.zconnect.zutto.zconnect.CustomSpinner
            android:id="@+id/spinner_time_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:entries="@array/time"
            android:prompt="@string/time_prompt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:text="to"
            android:textSize="20dp"/>

        <com.zconnect.zutto.zconnect.CustomSpinner
            android:id="@+id/spinner_time_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:entries="@array/time"
            android:prompt="@string/time_prompt" />

    </LinearLayout>


    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/curveradiusgoogle"
        android:text="Search" />

</LinearLayout>
